# IMDB-100-Multiview-Visualization

./: README.md
Task A Visualisation of Year, Runtime, and Genre/: README.md  Task A - Year Runtime Genre.ipynb  celery.sqlite  pyproject.toml
Task B Visualisation of Income, Rating, and Category/: README.md  Task B - Income Rating Category.ipynb  pyproject.toml
Task C Visualisation of Movie Category, Votes, and Year/: README.md  Task C - Movie Category Votes.ipynb  pyproject.toml
